tree-sitter/tree-sitter-woowoo/corpus/object/object_with_three_blocks.txt
==================
Object - with three blocks
==================
.Chapter Výroková logika


.Example:
  label: exa_podformule_strom
  title: Podformule a formační strom

  Určíme všechny podformule a formačním stromem znázorníme, jak z nich byla postupně sestavena formule $\neg(A \wedge B) \Leftrightarrow (C \Rightarrow A)$.


  Podformule formule $\neg(A \wedge B) \Leftrightarrow (C \Rightarrow A)$ jsou:

    A, B, C, (A \wedge B), \neg(A \wedge B), (C \Rightarrow A), \neg(A \wedge B) \Leftrightarrow (C \Rightarrow A).


  Formační strom vypadá následovně:

  .centered:

    !tikz:
      filename: fig-formacnistrom
      options: 'level distance=1cm, thick, level/.style={sibling distance=2cm}, level 1/.style={sibling distance=3cm}'

      \node {$\neg(A \wedge B) \Leftrightarrow (C \Rightarrow A)$}
      child {node {$\neg(A \wedge B)$}
      child {node {$A \wedge B$} child {node {$A$}} child {node {$B$}}}}
      child {node {$C \Rightarrow A$} child {node {$C$}} child {node {$A$}}};


---
(source_file
      (document_part
        (document_part_type)
        (document_part_title)
        (document_part_body
          (object
            (object_type)
            (meta_block)
            (block
              (text_block
                (text)
                (math_environment
                  (math_environment_body))
                (text)))
            (block
              (text_block
                (text)
                (math_environment
                  (math_environment_body))
                (text))
              (implicit_outer_environment
                (block
                  (text_block
                    (text)))))
            (block
              (text_block
                (text))
              (classic_outer_environment
                (outer_environment_type)
                (block
                  (fragile_outer_environment
                    (outer_environment_type)
                    (meta_block)
                    (fragile_outer_environment_body)))))))))
