tree-sitter/tree-sitter-woowoo/corpus/object/simple.txt
==================
Object - simple with one text block
==================
.Chapter Test
  label: one-simple-object


.Remark:
  label: rem_negace_neni_spojka

  Technicky vzato, negace není spojkou v pravém slova smyslu, jelikož se aplikuje ne na dvě formule, ale jen na jednu. Pro jednoduchost ji však mezi spojky zařazujeme.


---

(source_file
  (document_part
    (document_part_type )
    (document_part_title )
    (meta_block )
    (document_part_body
      (object
        (object_type )
        (meta_block )
        (block
          (text_block
            (text )))))))
