tree-sitter/tree-sitter-woowoo/corpus/other/multispace.txt
==================
More than one space in various places
==================
.Chapter T      es           t

"he   l      lo".bold     text
T  e     x                t

The country of .italic:Italy   is    a    home to   .bold:P.bold:I.bold:Z.bold:Z.bold:A
---

(source_file
  (document_part
    (document_part_type )
    (document_part_title )
    (document_part_body
      (block
        (text_block
          (verbose_inner_environment
            (verbose_inner_environment_classic
              (verbose_inner_environment_body
                (text ))
              (verbose_inner_environment_type )))
          (text )
          (text ))
        (text_block
          (text )
          (short_inner_environment
            (short_inner_environment_type )
            (short_inner_environment_body ))
          (text )
          (short_inner_environment
            (short_inner_environment_type )
            (short_inner_environment_body ))
          (short_inner_environment
            (short_inner_environment_type )
            (short_inner_environment_body ))
          (short_inner_environment
            (short_inner_environment_type )
            (short_inner_environment_body ))
          (short_inner_environment
            (short_inner_environment_type )
            (short_inner_environment_body ))
          (short_inner_environment
            (short_inner_environment_type )
            (short_inner_environment_body )))))))
