tree-sitter/tree-sitter-woowoo/corpus/outer_environment/fragile/fragile_with_indent_like.txt
==================
Fragile Outer environment - with "indent"
==================
.Chapter Výroková logika


.Remark:
  label: rem_universum_mnoziny
  title: Universum v teorii množin

  .itemize:

    .item:

      "reálná čísla".notion.1 $\R$, která sestávají jak ze všech čísel racionálních (a pochopitelně tedy i celých a přirozených), tak z čísel iracionálních (kterých je "mnohem více".emphasize, jak si ukážeme později při studiu pojmu "mohutnost množin".notion, v Podkapitole .reference:sec_0506_mohutnost).
      Reálná čísla si můžeme názorně představovat jako všechny body ležící na přímce, na tzv. "číselné ose".notion.
        1:
          index: [čísla!reálná, reálná čísla]

      .centered:

        !tikz:
          filename: fig-ciselna-osa

          \draw[thick,->] (-5,0) -- (5,0);
          \foreach \x in {-4,...,4} {
            \draw[thick] (\x,.05) -- (\x,-.05) node[below] {$\x$};
          };


---
(source_file
      (document_part
        (document_part_type)
        (document_part_title)
        (document_part_body
          (object
            (object_type)
            (meta_block)
            (block
              (classic_outer_environment
                (outer_environment_type)
                (block
                  (classic_outer_environment
                    (outer_environment_type)
                    (block
                      (text_block
                        (verbose_inner_environment
                          (verbose_inner_environment_classic
                            (verbose_inner_environment_body
                              (text))
                            (verbose_inner_environment_type)
                            (verbose_inner_environment_meta)))
                        (text)
                        (math_environment
                          (math_environment_body))
                        (text)
                        (verbose_inner_environment
                          (verbose_inner_environment_classic
                            (verbose_inner_environment_body
                              (text))
                            (verbose_inner_environment_type)))
                        (text)
                        (verbose_inner_environment
                          (verbose_inner_environment_classic
                            (verbose_inner_environment_body
                              (text))
                            (verbose_inner_environment_type)))
                        (text)
                        (short_inner_environment
                          (short_inner_environment_type)
                          (short_inner_environment_body))
                        (text)
                        (text)
                        (verbose_inner_environment
                          (verbose_inner_environment_classic
                            (verbose_inner_environment_body
                              (text))
                            (verbose_inner_environment_type)))
                        (text)
                        (meta_block))
                      (classic_outer_environment
                        (outer_environment_type)
                        (block
                          (fragile_outer_environment
                            (outer_environment_type)
                            (meta_block)
                            (fragile_outer_environment_body)))))))))))))
