tree-sitter/tree-sitter-woowoo/corpus/outer_environment/fragile/simple.txt
==================
Fragile Outer environment - simple
==================
.Chapter Test
  label: various-outers


!frag:
  meta

  content

!frag:

  content


!normal text. !!!!nothing unusual:

---

(source_file
  (document_part
    (document_part_type )
    (document_part_title )
    (meta_block )
    (document_part_body
      (block
          (fragile_outer_environment
            (outer_environment_type )
            (meta_block )
            (fragile_outer_environment_body))
          (fragile_outer_environment
            (outer_environment_type )
            (fragile_outer_environment_body)))
      (block
        (text_block
          (text ))))))
