tree-sitter/tree-sitter-woowoo/corpus/outer_environment/implicit/nested_implicits.txt
==================
Outer environment - nested implicits
==================
.Chapter Test
  label: not-sure-why-but-why-not


            very nested implicit env.

---

(source_file
  (document_part
    (document_part_type )
    (document_part_title )
    (meta_block )
    (document_part_body
      (block
        (implicit_outer_environment
          (block
            (implicit_outer_environment
              (block
                (implicit_outer_environment
                  (block
                    (implicit_outer_environment
                      (block
                        (implicit_outer_environment
                          (block
                            (implicit_outer_environment
                              (block
                                (text_block
                                  (text ))))))))))))))))))
