tree-sitter/tree-sitter-woowoo/corpus/outer_environment/nesting/complex.txt
==================
Outer environment - complex nesting
==================
.Chapter Test
  label: complicated-nesting


.outer:

  .outer:

    .outer:

      .outer:

        content

    .outer:

      content

  .outer:

    content

    .outer:

      content

.outer:

  content

---
(source_file
  (document_part
    (document_part_type )
    (document_part_title )
    (meta_block )
    (document_part_body
      (block
          (classic_outer_environment
            (outer_environment_type )
            (block
                (classic_outer_environment
                  (outer_environment_type )
                  (block
                      (classic_outer_environment
                        (outer_environment_type )
                        (block
                            (classic_outer_environment
                              (outer_environment_type )
                              (block
                                (text_block
                                  (text ))))))
                      (classic_outer_environment
                        (outer_environment_type )
                        (block
                          (text_block
                            (text ))))))
                (classic_outer_environment
                  (outer_environment_type )
                  (block
                    (text_block
                      (text ))
                      (classic_outer_environment
                        (outer_environment_type )
                        (block
                          (text_block
                            (text ))))))))
          (classic_outer_environment
            (outer_environment_type )
            (block
              (text_block
                (text ))))))))
