tree-sitter/tree-sitter-woowoo/corpus/outer_environment/nesting/more_blocks.txt
==================
Outer environment - blocks
==================
.Chapter Test
  label: complicated-nesting


.outer:
  meta

  content


.outer:
  meta

  content
    meta-content

  content
    meta-content

  .outer:
    meta

    .outer:
      meta

      content

  .outer:

    content


content

---
(source_file
  (document_part
    (document_part_type )
    (document_part_title )
    (meta_block )
    (document_part_body
      (block
          (classic_outer_environment
            (outer_environment_type )
            (meta_block )
            (block
              (text_block
                (text )))))
      (block
          (classic_outer_environment
            (outer_environment_type )
            (meta_block )
            (block
              (text_block
                (text )
                (meta_block ))
              (text_block
                (text )
                (meta_block ))
                (classic_outer_environment
                  (outer_environment_type )
                  (meta_block )
                  (block
                      (classic_outer_environment
                        (outer_environment_type )
                        (meta_block )
                        (block
                          (text_block
                            (text ))))))
                (classic_outer_environment
                  (outer_environment_type )
                  (block
                    (text_block
                      (text )))))))
      (block
        (text_block
          (text ))))))
